Corrections to memberentrygen.tmpl and members.js, experimental reformatting of moremember.tmpl
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -503,3 +503,12 @@ div.patroninfo ul {
 div.patroninfo ul li {
 	list-style-type : none;
 }
+
+a.member-edit {
+	float : right;
+	background-color : #DBECC8;
+	margin-top : .5em;
+	padding : .3em;
+	text-align : right;
+	text-decoration : none;
+}
